Login almost working

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+JWT_SECRET = mysupersecretpassword
+EXPIRES_IN = 90d
+JWT_COOKIE_EXPIRES = 90
 DATABASE = nodejs-login
 DATABASE_HOST = localhost
 DATABASE_USER = root
